# PP-PicoDet-Android-Demo

./: .gitignore  README.md  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: nanodet-m-320.param  nanodet-m-416.param  picodet-l-640.param  picodet-s-416.param  yolov5s.param
app/src/main/java/com/baidu/common/: AppCompatPreferenceActivity.java  CameraSurfaceView.java  Utils.java
app/src/main/java/com/baidu/picodetncnn/: CameraFragment.java  ContentFragment.java  MainActivity.java  NanoDetNcnn.java  PhotoFragment.java  TestInferVideo.java
app/src/main/jni/: CMakeLists.txt  nanodet.cpp  nanodet.h  nanodetncnn.cpp
app/src/main/res/layout/: activity_test_infer_video.xml  fragment_camera.xml  fragment_photo.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
ncnn/: README.md
old_assset/: picodet-m-processed-320.param  picodet-s-four-head.param  picodet-s-three-head.param
paddlelite/: README.md
